Added point board to keep track of scores

--- a/pong.html
+++ b/pong.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Basic Pong HTML Game</title>
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
 </head>
+
 <body>
-<canvas width="750" height="585" id="game"></canvas>
-<script src="scripts.js"></script>
+  <h1 class="lScore">P1 Score:</h1>
+  <h1 id="leftScore" class="left">left</h1>
+  <canvas width="750" height="585" id="game"></canvas>
+  <h1 class="rScore">P2 Score:</h1>
+  <h1 id="rightScore" class="right">right</h1>
+  <script src="scripts.js"></script>
 </body>
+
 </html>
