Added Reset Score button

--- a/pong.html
+++ b/pong.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <button class="reset" onclick="resetScores()">Reset Scores</button>
   <h1 class="lScore">P1 Score:</h1>
   <h1 id="leftScore" class="left">left</h1>
   <canvas width="750" height="585" id="game"></canvas>
