Added itellegence to left paddle and game over

--- a/pong.html
+++ b/pong.html
@@ -8,12 +8,13 @@
 </head>
 
 <body>
-  <button class="reset" onclick="resetScores()">Reset Scores</button>
   <h1 class="lScore">P1 Score:</h1>
   <h1 id="leftScore" class="left">left</h1>
   <canvas width="750" height="585" id="game"></canvas>
   <h1 class="rScore">P2 Score:</h1>
   <h1 id="rightScore" class="right">right</h1>
+  <h2 id="gameMessage" class="gameMessage">First Player to 7 Wins!</h2>
+  <button class="reset" onclick="resetScores()">Play Again</button>
   <script src="scripts.js"></script>
 </body>
 
